tests/idris2/error010/expected
1/1: Building Loop (Loop.idr)
Error: While processing right hand side of example. Main.example is already defined.

Loop:2:11--2:19
 1 | example : String
 2 | example = ?example
               ^^^^^^^^

